--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-gesture-handler": "^1.4.1",
+    "react-native-indicator": "^1.0.0",
     "react-native-reanimated": "^1.2.0",
     "react-navigation": "^4.0.9",
     "react-navigation-stack": "^1.9.0",
