--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,6 +10,11 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
+      <meta-data  
+      android:name="com.google.android.geo.API_KEY" 
+      android:value="AIzaSyBLIrmeYHv0rrRlMAEH86WJ4_EhEYbKNEM" 
+      />
+      <uses-library  android:name="org.apache.http.legacy" android:required="false"/>
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
