--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "base-64": "^0.1.0",
     "firebase": "^6.6.2",
     "lodash": "^4.17.15",
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-indicator": "^1.0.0",
+    "react-native-maps": "^0.25.0",
+    "react-native-maps-directions": "^1.7.0",
     "react-native-reanimated": "^1.2.0",
     "react-navigation": "^4.0.9",
     "react-navigation-stack": "^1.9.0",
